fix head to get change head method no response body
