# docs/swagger.json
@@ -9,6 +9,11 @@
     "paths": {
         "/v1/bucket": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "create bucket",
                 "consumes": [
                     "application/json"
@@ -57,53 +62,13 @@
             }
         },
         "/v1/bucket/{bucket_name}": {
-            "delete": {
-                "description": "delete bucket",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "bucket"
-                ],
-                "summary": "DeleteBucket",
-                "parameters": [
+            "get": {
+                "security": [
                     {
-                        "type": "string",
-                        "description": "bucket name",
-                        "name": "bucket_name",
-                        "in": "path",
-                        "required": true
+                        "ApiKeyAuth": []
                     }
                 ],
-                "responses": {
-                    "204": {
-                        "description": ""
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    },
-                    "403": {
-                        "description": "Forbidden",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    }
-                }
-            },
-            "head": {
-                "description": "head bucket",
+                "description": "get bucket",
                 "consumes": [
                     "application/json"
                 ],
@@ -113,7 +78,7 @@
                 "tags": [
                     "bucket"
                 ],
-                "summary": "HeadBucket",
+                "summary": "GetBucket",
                 "parameters": [
                     {
                         "type": "string",
@@ -161,10 +126,65 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "delete bucket",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "bucket"
+                ],
+                "summary": "DeleteBucket",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "bucket name",
+                        "name": "bucket_name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": ""
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
             }
         },
         "/v1/bucket/{bucket_name}/file": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "upload file",
                 "consumes": [
                     "multipart/form-data"
@@ -219,6 +239,11 @@
         },
         "/v1/bucket/{bucket_name}/file/{file_name}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "download File",
                 "consumes": [
                     "application/json"
@@ -277,6 +302,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "delete file",
                 "consumes": [
                     "application/json"
@@ -327,9 +357,16 @@
                         }
                     }
                 }
-            },
-            "head": {
-                "description": "head file sign info",
+            }
+        },
+        "/v1/bucket/{bucket_name}/file/{file_name}/sign": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "get file sign info",
                 "consumes": [
                     "application/json"
                 ],
