# response/response.go
@@ -13,13 +13,13 @@ import (
 
 // ErrorWith gin response with format err
 func ErrorWith(ctx *gin.Context, err error) {
-	var er ErrorResponse
-	if errors.As(err, &er) {
-		ctx.JSON(int(er.Code), er)
-	} else {
-		ctx.JSON(http.StatusInternalServerError,
-			Error(http.StatusInternalServerError, err.Error()))
+	var errorResponse *ErrorResponse
+	if errors.As(err, &errorResponse) {
+		ctx.JSON(errorResponse.Code, errorResponse)
+		return
 	}
+	ctx.JSON(http.StatusInternalServerError,
+		Error(http.StatusInternalServerError, err.Error()))
 }
 
 // ErrorWithMessage gin response with message
